--- a/README
+++ b/README
@@ -1,4 +1,5 @@
 Head over to the [applications] page.
+[I'm an inline-style link](https://www.google.com)
 Click “new application”. Give it a name, picture and description.
 Click “Create Bot User” and click “Yes, Do It!” when the dialog pops up.
 Copy down the token.
@@ -13,4 +14,5 @@ $news <subreddit> l|s|r <number>
 $timer <subreddit> <Time in hours>
 $stock <symbol>
 $coin <coin symbol>
+
 [applications]: https://discordapp.com/developers/applications/me
